@@ -34,8 +34,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
   Can't call method "register_cleanup" on an
   undefined value at /usr/lib/perl5/5.00503/CGI.pm line 263
 
-- RegistryLoader virtualhost support [John Hughes <john@Calva.COM>]
-
 - PerlRun::flush_namespace needs to check if_owner for all types, not
 just cvs [John M Vinopal <jvinopal@abattoir.com>]
 
